# 2pt-kNN

./: .gitignore  .mcp.json  2pt-kNN.tar  Cargo.toml  README.md  bench_wasm.mjs  build.rs  test_wasm.mjs
docs/: SESSION_NOTES.md  kNN-vs-Euclid-2PCF-comparison.md
examples/: test_per_point.rs  test_plot.rs  test_plot_only.rs  theory_plots.rs
paper/: main.tex  notes_euclid_comparison.tex  sec_anisotropic.tex  sec_background.tex  sec_discussion.tex  sec_errors.tex  sec_estimator.tex  sec_implementation.tex  sec_introduction.tex  sec_ladder.tex  sec_nonpoisson.tex  sec_validation.tex  sec_weights.tex
pkvol/: .gitignore  Cargo.toml  README.md  pyproject.toml
pkvol/benchmarks/: bench_pk.py  stress_test.py
pkvol/docs/: DESIGN.md
pkvol/examples/: clustered_demo.py  conditional_demo.py  copula_summary.py  mark_perturbation.py  poisson_null_test.py  random_vs_data_query.py
pkvol/python/pkvol/: __init__.py  _api.py  conditional.py  copula.py  sedist.py
pkvol/python_tests/: test_basic.py  test_conditional.py  test_copula_sedist.py  test_marks_randoms.py
pkvol/src/: angular_search.rs  ecdf2d.rs  haversine.rs  lib.rs  marks.rs  pk_aggregate.rs  py_bindings.rs  randoms.rs  shell_counts.rs
pkvol/tests/: integration_pk.rs
plots/morton/: morton_cic.typ  morton_residuals.typ  morton_summary.typ  morton_xi_by_level.typ  morton_xi_vs_analytic.typ
plots/paper/: xi_comparison.tsv
plots_poisson/: xi_comparison.tsv
pt/: AUDIT_REPORT.md  Cargo.toml
pt/examples/: audit_bias_sign.rs  audit_fftlog_rsd.rs  audit_full.rs  audit_timings.rs  demo.rs  doroshkevich_debug.rs  doroshkevich_validate.rs  fftlog_convergence.rs  gl_test.rs  gl_verify.rs  inspect_p22_cross.rs  reference_table.rs  rsd_check.rs
pt/src/: cosmology.rs  doroshkevich.rs  fftlog.rs  integrals.rs  knn_cdf.rs  lib.rs
scripts/: corrfunc_xi.py
src/: corrfunc.rs  lib.rs  plotting.rs  theory_plots.rs  validation.rs  wasm.rs
src/cic/: mod.rs
src/diagnostics/: mod.rs
src/estimator/: cumulants.rs  mod.rs  profile.rs  savgol.rs
src/explorer/: mod.rs
src/gpu/: knn.wgsl  mod.rs
src/grid/: mod.rs
src/ladder/: mod.rs
src/lca_tree/: checksum.rs  conditional.rs  consistency.rs  eigen.rs  estimator.rs  fmm.rs  gravity.rs  kernel.rs  likelihood.rs  mod.rs  moments.rs  multipole.rs  randoms.rs  tidal.rs
src/mock/: mod.rs
src/morton/: mod.rs
src/theory/: bias.rs  cosmology.rs  crosscheck.rs  cumulants.rs  eft.rs  growth.rs  lpt.rs  mod.rs  pkv.rs  spectral.rs  volume_pdf.rs
src/theory/action/: action_eft.rs  action_lpt.rs  diagrams.rs  kernel.rs  mod.rs
src/tree/: mod.rs
src/typst-packages/preview/lilaq/0.6.0/src/logic/: tick-format.typ
src/xi_morton/: cell_pairs.rs  mod.rs
tests/: theory_integration.rs
validation/: coxmock.tex  xi_comparison.tsv
web/: app.js  index.html  style.css
